Updated hero section tagline

--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
     <section id="home" class="hero">
         <div class="hero-container">
             <div class="hero-content">
-                <h1 class="hero-title">Turning Ideas<br>Into Reality</h1>
+                <h1 class="hero-title">From Code to Creativity<br>Building Smarter Futures</h1>
                 <p class="hero-subtitle">AIML Student & Full Stack Developer</p>
                 <p class="hero-description">
                     Crafting intelligent digital experiences that blend AI/ML with web development. 
