--- a/index.html
+++ b/index.html
@@ -317,11 +317,11 @@
                         </div>
                     </div>
                     <div class="resume-actions">
-                        <a href="./resume.pdf" class="btn btn-primary" download>
+                        <a href="./Nageshk.pdf" class="btn btn-primary" download>
                             <i class="fas fa-download"></i>
                             Download Resume (PDF)
                         </a>
-                        <a href="./resume.pdf" class="btn btn-secondary" target="_blank">
+                        <a href="./Nageshk.pdf" class="btn btn-secondary" target="_blank">
                             <i class="fas fa-eye"></i>
                             View Resume
                         </a>
